5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1709_3069.log
== TEST (2019-05-02 11:16:54) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))

if (ataque == FURIA)
	a = 10 + (dado1+dado2)
	print(a)
elif (ataque == GRITO):
	y = 6 + (dado1+dado2)
	print(y)
else:
	(ataque == TOQUE)
	x = (dado1 + dado2)**2
	print(x)



-- ERROR:
File "XXXX", line 9
    if (ataque == FURIA)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:17:17) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))

if (ataque == "FURIA")
	a = 10 + (dado1+dado2)
	print(a)
elif (ataque == "GRITO"):
	y = 6 + (dado1+dado2)
	print(y)
else:
	(ataque == "TOQUE")
	x = (dado1 + dado2)**2
	print(x)



-- ERROR:
File "XXXX", line 9
    if (ataque == "FURIA")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:17:41) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))

if (ataque == "FURIA"):
	a = 10 + (dado1+dado2)
	print(a)
elif (ataque == "GRITO"):
	y = 6 + (dado1+dado2)
	print(y)
else:
	(ataque == "TOQUE")
	x = (dado1 + dado2)**2
	print(x)



-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:17:58) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))

if (ataque == "FURIA"):
	a = 10 + (dado1+dado2)
	print(a)
elif (ataque == "GRITO"):
	y = 6 + (dado1+dado2)
	print(y)
else:
	(ataque == "TOQUE")
	x = (dado1 + dado2)**2
	print(x)



-- EXECUTION TIME:
0.238443
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
49
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:23:42) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if ((ataque == "FURIA" and (2 <= dados <= 16)):
	a = 10 + (dados)
	print(a)
elif ((ataque == "GRITO" and (2 <= dados <= 16)):
	y = 6 + (dados)
	print(y)
else:
	(ataque == "TOQUE") and (2<= dados <= 16)):
	x = (dados)**2
	print(x)



-- ERROR:
File "XXXX", line 10
    if ((ataque == "FURIA" and (2 <= dados <= 16)):
                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:00) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if ((ataque == "FURIA") and (2 <= dados <= 16)):
	a = 10 + (dados)
	print(a)
elif ((ataque == "GRITO" and (2 <= dados <= 16)):
	y = 6 + (dados)
	print(y)
else:
	(ataque == "TOQUE") and (2<= dados <= 16)):
	x = (dados)**2
	print(x)



-- ERROR:
File "XXXX", line 13
    elif ((ataque == "GRITO" and (2 <= dados <= 16)):
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:11) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if ((ataque == "FURIA") and (2 <= dados <= 16)):
	a = 10 + (dados)
	print(a)
elif ((ataque == "GRITO") and (2 <= dados <= 16)):
	y = 6 + (dados)
	print(y)
else:
	((ataque == "TOQUE") and (2<= dados <= 16)):
	x = (dados)**2
	print(x)



-- ERROR:
File "XXXX", line 17
    ((ataque == "TOQUE") and (2<= dados <= 16)):
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:39) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if ((ataque == "FURIA") and (2 <= dados <= 16)):
	a = 10 + (dados)
	print(a)
elif ((ataque == "GRITO") and (2 <= dados <= 16)):
	y = 6 + (dados)
	print(y)
else:
	x = (dados)**2
	print(x)



-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:47) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if ((ataque == "FURIA") and (2 <= dados <= 16)):
	a = 10 + (dados)
	print(a)
elif ((ataque == "GRITO") and (2 <= dados <= 16)):
	y = 6 + (dados)
	print(y)
else:
	x = (dados)**2
	print(x)



-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:25:01) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if ((ataque == "FURIA") and (2 <= dados <= 16)):
	a = 10 + (dados)
	print(a)
elif ((ataque == "GRITO") and (2 <= dados <= 16)):
	y = 6 + (dados)
	print(y)
else:
	x = (dados)**2
	print(x)



-- EXECUTION TIME:
0.170161
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
49
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:55) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if ((ataque == "FURIA".upper()) and (2 <= dados <= 16)):
	a = 10 + (dados)
	print(a)
elif ((ataque == "GRITO") and (2 <= dados <= 16)):
	y = 6 + (dados)
	print(y)
else:
	x = (dados)**2
	print(x)



-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:26:16) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if ((ataque == "FURIA") and (2 <= dados <= 16)):
	a = 10 + (dados)
	print(a)
elif ((ataque == "GRITO") and (2 <= dados <= 16)):
	y = 6 + (dados)
	print(y)
else:
	x = (dados)**2
	print(x)



-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:26:45) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if ((ataque == "FURIA") and (2 <= dados <= 16)):
	a = 10 + (dados)
	print(a)
elif ((ataque == "GRITO") and (2 <= dados <= 16)):
	y = 6 + (dados)
	print(y)
else:
	x = (dados)**2
	print(x)



-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:27:03) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if ((ataque == "FURIA".upper()) and (2 <= dados <= 16)):
	a = 10 + (dados)
	print(a)
elif ((ataque == "GRITO") and (2 <= dados <= 16)):
	y = 6 + (dados)
	print(y)
else:
	x = (dados)**2
	print(x)



-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:29:05) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dados <= 16):
	if ((ataque == "FURIA".upper()):
		a = 10 + (dados)
		print(a)
	elif ((ataque == "GRITO".upper()):
		y = 6 + (dados)
		print(y)
	elif (ataque == "TOQUE".upper()):
		x = (dados)**2
		print(x)



-- ERROR:
File "XXXX", line 11
    if ((ataque == "FURIA".upper()):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:29:07) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dados <= 16):
	if ((ataque == "FURIA".upper()):
		a = 10 + (dados)
		print(a)
	elif ((ataque == "GRITO".upper()):
		y = 6 + (dados)
		print(y)
	elif (ataque == "TOQUE".upper()):
		x = (dados)**2
		print(x)



-- ERROR:
File "XXXX", line 11
    if ((ataque == "FURIA".upper()):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:29:22) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dados <= 16):
	if (ataque == "FURIA"):
		a = 10 + (dados)
		print(a)
	elif ((ataque == "GRITO".upper()):
		y = 6 + (dados)
		print(y)
	elif (ataque == "TOQUE".upper()):
		x = (dados)**2
		print(x)



-- ERROR:
File "XXXX", line 14
    elif ((ataque == "GRITO".upper()):
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:29:55) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dados <= 16):
	if (ataque == "FURIA"):
		a = 10 + (dados)
		print(a)
	elif ((ataque == "GRITO"):
		y = 6 + (dados)
		print(y)
	elif (ataque == "TOQUE"):
		x = (dados)**2
		print(x)



-- ERROR:
File "XXXX", line 14
    elif ((ataque == "GRITO"):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:30:02) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dados <= 16):
	if (ataque == "FURIA"):
		a = 10 + (dados)
		print(a)
	elif (ataque == "GRITO"):
		y = 6 + (dados)
		print(y)
	elif (ataque == "TOQUE"):
		x = (dados)**2
		print(x)



-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:30:37) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dados <= 16):
	if (ataque == "FURIA"):
		a = 10 + (dados)
		print(a)
	elif (ataque == "GRITO"):
		y = 6 + (dados)
		print(y)
	else:
		x = (dados)**2
		print(x)



-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:30:53) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dados <= 16):
	if (ataque == "FURIA"):
		a = 10 + (dados)
		print(a)
	elif (ataque == "GRITO"):
		y = 6 + (dados)
		print(y)
	else:
		x = (dados)**2
		print(x)



-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:50) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dados <= 16):
	if (ataque == "FURIA"):
		a = 10 + (dados)
		print(a)
	elif (ataque == "GRITO"):
		y = 6 + (dados)
		print(y)
	else:
		x = (dados)**2
		print(x)
else:
	print("Entrada invalida")

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:01) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dados <= 16):
	if (ataque.upper() == "FURIA"):
		a = 10 + (dados)
		print("pontos de vida perdidos:", a)
	elif (ataque == "GRITO"):
		y = 6 + (dados)
		print("pontos de vida perdidos:", y)
	else:
		x = (dados)**2
		print("pontos de vida perdidos:", x)
else:
	print("Entrada invalida")

-- OUTPUT:
pontos de vida perdidos: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:37) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dados <= 16):
	if (ataque.upper() == "FURIA"):
		a = 10 + (dados)
		print("pontos de vida perdidos:", a)
	elif (ataque.upper() == "GRITO"):
		y = 6 + (dados)
		print("pontos de vida perdidos:", y)
	else:
		x = (dados)**2
		print("pontos de vida perdidos:", x)
else:
	print("Entrada invalida")

-- OUTPUT:
pontos de vida perdidos: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:54) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dados <= 16):
	if (ataque.upper() == "FURIA"):
		a = 10 + (dados)
		print("pontos de vida perdidos:", a)
	elif (ataque.upper() == "GRITO"):
		y = 6 + (dados)
		print("pontos de vida perdidos:", y)
	else:
		x = (dados)**2
		print("pontos de vida perdidos:", x)
else:
	print("Entrada invalida")

-- OUTPUT:
pontos de vida perdidos: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:34:10) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dados <= 16):
	if (ataque.upper() == "FURIA"):
		a = 10 + (dados)
		print("pontos de vida perdidos:", a)
	elif (ataque.upper() == "GRITO"):
		y = 6 + (dados)
		print("pontos de vida perdidos:", y)
	else:
		x = (dados)**2
		print("pontos de vida perdidos:", x)
else:
	print("Entrada invalida")

-- EXECUTION TIME:
0.181905
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
pontos de vida perdidos: 100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
pontos de vida perdidos: 49
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
pontos de vida perdidos: 13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:34:15) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dados <= 16):
	if (ataque.upper() == "FURIA"):
		a = 10 + (dados)
		print("pontos de vida perdidos:", a)
	elif (ataque.upper() == "GRITO"):
		y = 6 + (dados)
		print("pontos de vida perdidos:", y)
	else:
		x = (dados)**2
		print("pontos de vida perdidos:", x)
else:
	print("Entrada invalida")

-- EXECUTION TIME:
0.171641
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
pontos de vida perdidos: 100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
pontos de vida perdidos: 49
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
pontos de vida perdidos: 13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:15) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dados <= 16):
	if (ataque.upper() == "FURIA"):
		a = 10 + (dados)
		print("pontos de vida perdidos:", a)
	elif (ataque.upper() == "GRITO"):
		y = 6 + (dados)
		print("pontos de vida perdidos:", y)
	else:
		x = (dados)**2
		print("pontos de vida perdidos:", x)
else:
	print("Entrada invalida")

-- OUTPUT:
pontos de vida perdidos: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:25) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dados <= 16):
	if (ataque.upper() == "FURIA"):
		a = 10 + (dados)
		print("pontos de vida perdidos:", a)
	elif (ataque.upper() == "GRITO"):
		y = 6 + (dados)
		print("pontos de vida perdidos:", y)
	else:
		x = (dados)**2
		print("pontos de vida perdidos:", x)
else:
	print("Entrada invalida")

-- OUTPUT:
pontos de vida perdidos: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:35:04) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dado1 <= 8 and 2<=dado<=8):
	if (ataque.upper() == "FURIA"):
		a = 10 + (dados)
		print("pontos de vida perdidos:", a)
	elif (ataque.upper() == "GRITO"):
		y = 6 + (dados)
		print("pontos de vida perdidos:", y)
	else:
		x = (dados)**2
		print("pontos de vida perdidos:", x)
else:
	print("Entrada invalida")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if (2 <= dado1 <= 8 and 2<=dado<=8):
NameError: name 'dado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:35:22) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dado1 <= 8 and 2<=dado2<=8):
	if (ataque.upper() == "FURIA"):
		a = 10 + (dados)
		print("pontos de vida perdidos:", a)
	elif (ataque.upper() == "GRITO"):
		y = 6 + (dados)
		print("pontos de vida perdidos:", y)
	else:
		x = (dados)**2
		print("pontos de vida perdidos:", x)
else:
	print("Entrada invalida")

-- OUTPUT:
pontos de vida perdidos: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:35:28) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dado1 <= 8 and 2<=dado2<=8):
	if (ataque.upper() == "FURIA"):
		a = 10 + (dados)
		print("pontos de vida perdidos:", a)
	elif (ataque.upper() == "GRITO"):
		y = 6 + (dados)
		print("pontos de vida perdidos:", y)
	else:
		x = (dados)**2
		print("pontos de vida perdidos:", x)
else:
	print("Entrada invalida")

-- EXECUTION TIME:
0.158711
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
pontos de vida perdidos: 100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:35:55) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dado1 <= 8 and 2<=dado2<=8):
	if (ataque.upper() == "FURIA"):
		a = 10 + (dados)
		print(a)
	elif (ataque.upper() == "GRITO"):
		y = 6 + (dados)
		print(y)
	else:
		x = (dados)**2
		print(x)
else:
	print("Entrada invalida")

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:36:03) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if (2 <= dado1 <= 8 and 2<=dado2<=8):
	if (ataque.upper() == "FURIA"):
		a = 10 + (dados)
		print(a)
	elif (ataque.upper() == "GRITO"):
		y = 6 + (dados)
		print(y)
	else:
		x = (dados)**2
		print(x)
else:
	print("Entrada invalida")

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:37:37) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if ((2 <= dado1 <= 8 and 2<=dado2<=8) and ataque == "FURIA" or ataque == "GRITO" or ataque == "TOQUE"):
	if (ataque.upper() == "FURIA"):
		a = 10 + (dados)
		print(a)
	elif (ataque.upper() == "GRITO"):
		y = 6 + (dados)
		print(y)
	else:
		x = (dados)**2
		print(x)
else:
	print("Entrada invalida")

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:37:49) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if ((2 <= dado1 <= 8 and 2<=dado2<=8) and ataque == "FURIA" or ataque == "GRITO" or ataque == "TOQUE"):
	if (ataque.upper() == "FURIA"):
		a = 10 + (dados)
		print(a)
	elif (ataque.upper() == "GRITO"):
		y = 6 + (dados)
		print(y)
	else:
		x = (dados)**2
		print(x)
else:
	print("Entrada invalida")

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:17) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if ((2 <= dado1 <= 8 and 2<=dado2<=8) and ataque.upper() == "FURIA" or ataque.upper() == "GRITO" or ataque.upper() == "TOQUE"):
	if (ataque.upper() == "FURIA"):
		a = 10 + (dados)
		print(a)
	elif (ataque.upper() == "GRITO"):
		y = 6 + (dados)
		print(y)
	else:
		x = (dados)**2
		print(x)
else:
	print("Entrada invalida")

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:38:23) 
-- CODE:
#Furia = 10 + (2 a 16)
#Grito = 6 + (2 a 16)
#Toque = (Dado 1 + dado 2)*2

ataque = input("Tipo de ataque: FURIA/GRITO/TOQUE?")
dado1 = int(input("Valor do primeiro dado:"))
dado2 = int(input("Valor do segundo dado: "))
dados = (dado1+dado2)

if ((2 <= dado1 <= 8 and 2<=dado2<=8) and ataque.upper() == "FURIA" or ataque.upper() == "GRITO" or ataque.upper() == "TOQUE"):
	if (ataque.upper() == "FURIA"):
		a = 10 + (dados)
		print(a)
	elif (ataque.upper() == "GRITO"):
		y = 6 + (dados)
		print(y)
	else:
		x = (dados)**2
		print(x)
else:
	print("Entrada invalida")

-- EXECUTION TIME:
0.142239
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
